# Business-Digital-Transformation-Lead

./: README.md
agents/agent-01-procurement/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
agents/agent-02-production/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
agents/agent-03-inventory/: main.py  pyproject.toml  requirements.txt
agents/agent-03-inventory/config/: agent_config.yaml  settings.py
agents/agent-03-inventory/src/: __init__.py  agent.py
agents/agent-03-inventory/src/decisions/: __init__.py
agents/agent-03-inventory/src/hitl/: gate.py
agents/agent-03-inventory/src/messaging/: __init__.py
agents/agent-03-inventory/src/scoring/: __init__.py
agents/agent-03-inventory/src/storage/: __init__.py
agents/agent-03-inventory/tests/: conftest.py  test_hitl.py
agents/agent-04-sales/: main.py  pyproject.toml  requirements.txt
agents/shared/hitl/: pyproject.toml
agents/shared/hitl/src/manufacturing_mas_hitl/: __init__.py  gate.py
agents/shared/hitl/tests/: __init__.py  conftest.py  test_hitl_p0.py
frontend/hitl-dashboard/: index.html  package-lock.json  package.json
manufacturing-mas-blueprint/: 01-architecture-diagram.md  02-agent-responsibility-matrix.md  03-tech-stack.md  04-implementation-roadmap.md  05-risk-register.md  06-end-to-end-workflow.md  07-evaluation-framework.md  08-implementation-project-plan.md  README.md
manufacturing-mas-blueprint/diagrams/: architecture.mmd  architecture.puml
manufacturing-mas-blueprint/governance/: autonomy-levels.md  conflict-resolution.md  hitl-approval-policy.md  hitl-gates.md
manufacturing-mas-blueprint/integration/: data-lakehouse-architecture.md  erp-connectors.md  streaming-etl-pipelines.md
manufacturing-mas-blueprint/security/: compliance-automation.md  zero-trust-architecture.md
(+92 files in other folders)
