[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-mas-agent-03-inventory"
version = "1.0.0"
description = "Inventory & Warehousing Agent for Manufacturing Multi-Agent System"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    "aiokafka>=0.10.0",
    "aiohttp>=3.9.0",
    "cloudevents>=1.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
